fixed white spacing issues in horizontal

--- a/Landing Page 03/style.scss
+++ b/Landing Page 03/style.scss
@@ -87,7 +87,7 @@ header {
 
     .menu-opened {
       background-color: $off-white;
-      position: absolute;
+      position: fixed;
       top: 0;
       right: 0;
       padding: 20px;
